--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: a0208fa7350083dd3bed8287ebd1a258f8e2c0c2
-ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
+ms.openlocfilehash: a986725e089666a83c431832a50d32224f020904
+ms.sourcegitcommit: 45aa1c24c3fdeb939121e856282b00bdcf00ea55
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/30/2020
-ms.locfileid: "93052148"
+ms.lasthandoff: 11/04/2020
+ms.locfileid: "93343727"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -52,7 +52,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
 
 ```diff
 {
@@ -80,7 +80,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 ## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
 
-Blazor WebAssemblyWenden Sie bei Projekten, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
+Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
 
 1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
 
@@ -107,13 +107,58 @@ Blazor WebAssemblyWenden Sie bei Projekten, einschließlich des *`Client`* Proje
     <ItemGroup>
     -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     ```
-    
+
+### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
+
+Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) für Microsoft-Konten zu verwenden:
+
+* Die APP erfordert die `openid` `offline_access` Bereiche und:
+
+  ```csharp
+  options.ProviderOptions.DefaultAccessTokenScopes.Add("openid");
+  options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
+  ```
+  
+* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+
+Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.
+
+### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad"></a>Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)
+
+Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) zu verwenden:
+
+* Die APP erfordert den folgenden `https://graph.microsoft.com/User.Read` Bereich:
+
+  ```csharp
+  options.ProviderOptions.DefaultAccessTokenScopes
+      .Add("https://graph.microsoft.com/User.Read");
+  ```
+  
+* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+  
+Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.
+
+### <a name="standalone-no-locblazor-app-with-azure-active-directory-aad-b2c"></a>Eigenständige Blazor App mit Azure Active Directory (AAD) B2C
+
+Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) B2C zu verwenden:
+
+* Die APP erfordert die `openid` `offline_access` Bereiche und:
+
+  ```csharp
+  options.ProviderOptions.DefaultAccessTokenScopes.Add("openid");
+  options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
+  ```
+  
+* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+
+Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>.
+
 > [!NOTE]
 > Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
